Fix EGL configs with ozone and surfaceless surfaces.

This CL fixes a bug where GLSurfaceOzoneSurfaceless was not calling
SurfaceOzoneEGL::GetEGLSurfaceConfig(). Instead, the default
implementation in GLSurfaceEGL::GetConfig() would be used to pick an
EGL config. This resulted in "No suitable EGL configs found." being
logged everytime a GLSurfaceOzoneSurfaceless was created. Instead it now
calls SurfaceOzoneEGL::GetEGLSurfaceConfig().

For offscreen surfaces SurfacelessEGL is used. This produced the same
error message on creation. SurfaceOzoneEGL::GetEGLSurfaceConfig() can't
be used with offscren surfaces as there is no window associated with the
offscreen surface. Instead, the EGL_SURFACE_TYPE attribute is set to
EGL_DONT_CARE in GLSurfaceEGL::GetConfig() for surfaceless surfaces.

The bug doesn't seem to cause problems beyond the logged error messages
as drawing still works under Ozone.

BUG=591064

Review URL: https://codereview.chromium.org/1738973004

Cr-Commit-Position: refs/heads/master@{#380171}

Former-commit-id: 445089ac3c1b949fb4248f3aef3ce5e7acd66d92